# rrbot_lqr_control

./: README.md
rrbot_control/: CMakeLists.txt  controller_plugin.xml  package.xml
rrbot_control/config/: rrbot_control.yaml
rrbot_control/include/rrbot_control/: lqrCost.info  lqr_controller.hpp
rrbot_control/launch/: rrbot_control.launch  rrbot_rqt.perspective
rrbot_control/src/: lqr_controller.cpp
rrbot_description/urdf/: extras.xacro  rrbot.gazebo  rrbot.xacro
rrbot_gazebo/: package.xml
rrbot_gazebo/launch/: rrbot_world.launch
