<?xml version="1.0"?>
<package>
  <name>rrbot_control</name>
  <version>0.0.0</version>
  <description>The rrbot_control package</description>

  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>

  <license>BSD</license>

  <url type="website">http://http://gazebosim.org/w/index.php?title=Tutorials/1.9/Using_A_URDF_In_Gazebo</url>
  <url type="bugtracker">https://github.com/osrf/gazebo_ros_demos/issues</url>
  <url type="repository">https://github.com/osrf/gazebo_ros_demos</url>

  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>controller_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>

  <build_depend>ct_core</build_depend>
  <build_depend>ct_rbd</build_depend>
  <build_depend>ct_optcon</build_depend>
  <build_depend>ct_models</build_depend>
  <build_depend>eigen</build_depend>
  <run_depend>ct_core</run_depend>
  <run_depend>ct_rbd</run_depend>
  <run_depend>ct_optcon</run_depend>
  <run_depend>ct_models</run_depend>
  <run_depend>eigen</run_depend>

  <run_depend>controller_interface</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>effort_controllers</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rqt_gui</run_depend>


  <export>
    <controller_interface plugin="${prefix}/controller_plugin.xml"/>
  </export>

</package>
